--- a/JavaScript/Atividade pratica Criando erro/index.html
+++ b/JavaScript/Atividade pratica Criando erro/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
-    <title>Substituir numeros pares</title>
+    <script src="scrip
+    t.js"></script>
+    <title>Criando Erro</title>
 </head>
 <body>
     
